[gd_scene load_steps=8 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://HealthBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://hud/FPS Counter.gd" type="Script" id=3]
[ext_resource path="res://mainmenu/pause/PauseMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://mainmenu/deathscreen/DeathScreen.tscn" type="PackedScene" id=5]
[ext_resource path="res://hud/Timer.gd" type="Script" id=6]
[ext_resource path="res://mainmenu/WinScreen.tscn" type="PackedScene" id=7]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="HealthBar" parent="." instance=ExtResource( 2 )]

[node name="FPS Counter" type="Label" parent="."]
pause_mode = 2
margin_left = 1200.0
margin_top = 20.0
margin_right = 1348.0
margin_bottom = 267.0
align = 3
valign = 3
uppercase = true
script = ExtResource( 3 )

[node name="PauseMenu" parent="." instance=ExtResource( 4 )]

[node name="DeathScreen" parent="." instance=ExtResource( 5 )]

[node name="WinScreen" parent="." instance=ExtResource( 7 )]

[node name="Timer" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -554.0
margin_top = 54.0
margin_right = -334.0
margin_bottom = 152.0
align = 3
script = ExtResource( 6 )

[connection signal="dieScreen" from="." to="DeathScreen" method="_on_HUD_dieScreen"]
[connection signal="timerSave" from="." to="Timer" method="_on_HUD_timerSave"]
[connection signal="timerStarted" from="." to="Timer" method="_on_HUD_timerStarted"]
[connection signal="timerStopped" from="." to="Timer" method="_on_HUD_timerStopped"]
[connection signal="winScreen" from="." to="WinScreen" method="_on_HUD_winScreen"]
